fixed name dropping animation + dark mode colors scheme (specifics)

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -45,8 +45,10 @@ body {
 @keyframes fadeAndDrop {
   0% {
     opacity: 0;
-    transform: translateY(-60%);
+    transform: translateY(-30%);
   }
+
+
   100% {
       opacity: 1;
       transform: translateY(0%);
